--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
 		"url": "https://ericmika.com"
 	},
 	"license": "MIT",
-	"packageManager": "pnpm@9.2.0+sha512.98a80fd11c2e7096747762304106432b3ddc67dcf54b5a8c01c93f68a2cd5e05e6821849522a06fb76284d41a2660d5e334f2ee3bbf29183bf2e739b1dafa771",
+	"packageManager": "pnpm@9.7.1",
 	"engines": {
-		"node": ">=18.0.0",
-		"pnpm": ">=8.0.0"
+		"node": "^18.19.0 || >=20.5.0",
+		"pnpm": ">=9.0.0"
 	},
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
@@ -43,7 +43,7 @@
 	],
 	"scripts": {
 		"build": "tsup && tsc -p tsconfig.build.json",
-		"clean": "git clean -fdX && rm ./pnpm-lock.yaml",
+		"clean": "rimraf ./pnpm-lock.yaml && git clean -fdX",
 		"dev": "pnpm run test",
 		"fix": "pnpm shared-config --fix",
 		"lint": "pnpm shared-config --lint",
@@ -52,27 +52,28 @@
 	},
 	"dependencies": {
 		"@types/mdast": "^4.0.4",
-		"@types/node": "^20.14.2",
+		"@types/node": "18.19.0",
 		"@types/unist": "^3.0.2"
 	},
 	"devDependencies": {
-		"@kitschpatrol/shared-config": "^4.6.7",
-		"bumpp": "^9.4.1",
+		"@kitschpatrol/shared-config": "^4.7.2",
+		"bumpp": "^9.5.1",
 		"chalk": "^5.3.0",
 		"cli-table3": "^0.6.5",
-		"deepmerge-ts": "^7.0.3",
+		"deepmerge-ts": "^7.1.0",
 		"hast-util-from-html": "^2.0.1",
 		"json5": "^2.2.3",
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
-		"tsup": "^8.1.0",
-		"type-fest": "^4.20.0",
-		"typescript": "^5.4.5",
-		"unified": "^11.0.4",
+		"rimraf": "^6.0.1",
+		"tsup": "^8.2.4",
+		"type-fest": "^4.24.0",
+		"typescript": "^5.5.4",
+		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0",
-		"vfile": "^6.0.1",
+		"vfile": "^6.0.2",
 		"vfile-message": "^4.0.2",
-		"vitest": "^1.6.0",
+		"vitest": "^2.0.5",
 		"zod": "^3.23.8"
 	},
 	"publishConfig": {
