--- a/package.json
+++ b/package.json
@@ -3,22 +3,16 @@
 	"version": "0.7.2",
 	"type": "module",
 	"description": "A remark plugin implementing the Markdown Autophagic Template (MDAT) system.",
-	"repository": {
-		"type": "git",
-		"url": "git@github.com:kitschpatrol/remark-mdat.git"
-	},
+	"repository": "github:kitschpatrol/remark-mdat",
 	"homepage": "https://github.com/kitschpatrol/remark-mdat",
-	"bugs": {
-		"url": "https://github.com/kitschpatrol/remark-mdat/issues",
-		"email": "eric@ericmika.com"
-	},
+	"bugs": "https://github.com/kitschpatrol/remark-mdat/issues",
 	"author": {
 		"name": "Eric Mika",
 		"email": "eric@ericmika.com",
 		"url": "https://ericmika.com"
 	},
 	"license": "MIT",
-	"packageManager": "pnpm@9.9.0",
+	"packageManager": "pnpm@9.10.0",
 	"engines": {
 		"node": "^18.19.0 || >=20.5.0",
 		"pnpm": ">=9.0.0"
@@ -43,11 +37,11 @@
 	],
 	"scripts": {
 		"build": "tsup && tsc -p tsconfig.build.json",
-		"clean": "rimraf ./pnpm-lock.yaml && git clean -fdX",
+		"clean": "git rm -f pnpm-lock.yaml ; git clean -fdX",
 		"dev": "pnpm run test",
-		"fix": "pnpm shared-config --fix",
-		"lint": "pnpm shared-config --lint",
-		"release": "pnpm bumpp --commit 'Release: %s' --tag 'v%s' && pnpm build && pnpm publish --otp $(op read 'op://Personal/Npmjs/one-time password?attribute=otp')",
+		"fix": "shared-config --fix",
+		"lint": "shared-config --lint",
+		"release": "bumpp --commit 'Release: %s' && pnpm run build && pnpm publish --otp $(op read 'op://Personal/Npmjs/one-time password?attribute=otp')",
 		"test": "vitest"
 	},
 	"dependencies": {
@@ -56,7 +50,7 @@
 		"@types/unist": "^3.0.3"
 	},
 	"devDependencies": {
-		"@kitschpatrol/shared-config": "^4.7.5",
+		"@kitschpatrol/shared-config": "^4.7.9",
 		"bumpp": "^9.5.2",
 		"chalk": "^5.3.0",
 		"cli-table3": "^0.6.5",
@@ -65,15 +59,14 @@
 		"json5": "^2.2.3",
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
-		"rimraf": "^6.0.1",
 		"tsup": "^8.2.4",
-		"type-fest": "^4.26.0",
-		"typescript": "^5.5.4",
+		"type-fest": "^4.26.1",
+		"typescript": "^5.6.2",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0",
 		"vfile": "^6.0.3",
 		"vfile-message": "^4.0.2",
-		"vitest": "^2.0.5",
+		"vitest": "^2.1.1",
 		"zod": "^3.23.8"
 	},
 	"publishConfig": {
