--- a/package.json
+++ b/package.json
@@ -47,10 +47,15 @@
 	"dependencies": {
 		"@types/mdast": "^4.0.4",
 		"@types/node": "18.19.0",
-		"@types/unist": "^3.0.3"
+		"@types/unist": "^3.0.3",
+		"type-fest": "^4.33.0",
+		"unified": "^11.0.5",
+		"vfile": "^6.0.3",
+		"zod": "^3.24.1"
 	},
 	"devDependencies": {
 		"@kitschpatrol/shared-config": "^4.7.12",
+		"@microsoft/api-extractor": "^7.49.1",
 		"bumpp": "^9.10.1",
 		"chalk": "^5.4.1",
 		"cli-table3": "^0.6.5",
@@ -60,14 +65,10 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
 		"tsup": "^8.3.5",
-		"type-fest": "^4.33.0",
 		"typescript": "^5.7.3",
-		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0",
-		"vfile": "^6.0.3",
 		"vfile-message": "^4.0.2",
-		"vitest": "^2.1.8",
-		"zod": "^3.24.1"
+		"vitest": "^2.1.8"
 	},
 	"publishConfig": {
 		"access": "public"
