--- a/package.json
+++ b/package.json
@@ -1,28 +1,7 @@
 {
 	"name": "remark-mdat",
 	"version": "0.7.5",
-	"type": "module",
 	"description": "A remark plugin implementing the Markdown Autophagic Template (MDAT) system.",
-	"repository": "github:kitschpatrol/remark-mdat",
-	"homepage": "https://github.com/kitschpatrol/remark-mdat",
-	"bugs": "https://github.com/kitschpatrol/remark-mdat/issues",
-	"author": {
-		"name": "Eric Mika",
-		"email": "eric@ericmika.com",
-		"url": "https://ericmika.com"
-	},
-	"license": "MIT",
-	"packageManager": "pnpm@9.15.4",
-	"engines": {
-		"node": "^18.19.0 || >=20.5.0",
-		"pnpm": ">=9.0.0"
-	},
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"files": [
-		"dist/*"
-	],
 	"keywords": [
 		"mdat",
 		"markdown",
@@ -35,12 +14,31 @@
 		"remark",
 		"remark-plugin"
 	],
+	"homepage": "https://github.com/kitschpatrol/remark-mdat",
+	"bugs": "https://github.com/kitschpatrol/remark-mdat/issues",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/github:kitschpatrol/remark-mdat"
+	},
+	"license": "MIT",
+	"author": {
+		"name": "Eric Mika",
+		"email": "eric@ericmika.com",
+		"url": "https://ericmika.com"
+	},
+	"type": "module",
+	"main": "./dist/index.js",
+	"module": "./dist/index.js",
+	"types": "./dist/index.d.ts",
+	"files": [
+		"dist/*"
+	],
 	"scripts": {
 		"build": "tsup && tsc -p tsconfig.build.json",
 		"clean": "git rm -f pnpm-lock.yaml ; git clean -fdX",
 		"dev": "pnpm run test",
-		"fix": "shared-config --fix",
-		"lint": "shared-config --lint",
+		"fix": "kpi fix",
+		"lint": "kpi lint",
 		"release": "bumpp --commit 'Release: %s' && pnpm run build && pnpm publish --otp $(op read 'op://Personal/Npmjs/one-time password?attribute=otp')",
 		"test": "vitest"
 	},
@@ -54,7 +52,7 @@
 		"zod": "^3.24.1"
 	},
 	"devDependencies": {
-		"@kitschpatrol/shared-config": "^4.7.12",
+		"@kitschpatrol/shared-config": "^5.0.6",
 		"@microsoft/api-extractor": "^7.49.1",
 		"bumpp": "^9.10.1",
 		"chalk": "^5.4.1",
@@ -65,12 +63,26 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.0",
 		"tsup": "^8.3.5",
-		"typescript": "^5.7.3",
+		"typescript": "~5.7.3",
 		"unist-util-visit": "^5.0.0",
 		"vfile-message": "^4.0.2",
 		"vitest": "^2.1.8"
 	},
+	"packageManager": "pnpm@10.5.2",
+	"engines": {
+		"node": "^18.19.0 || >=20.5.0",
+		"pnpm": ">=10.0.0"
+	},
 	"publishConfig": {
 		"access": "public"
+	},
+	"pnpm": {
+		"onlyBuiltDependencies": [
+			"esbuild",
+			"puppeteer"
+		],
+		"overrides": {
+			"eslint-plugin-markdown": "^5.1.0"
+		}
 	}
 }
