--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,10 +1,7 @@
 {
 	"extends": "./tsconfig.json",
-	"compilerOptions": {
-		"noEmit": false,
-		"declaration": true,
-		"outDir": "./dist",
-		"emitDeclarationOnly": true
-	},
-	"include": ["src/**/*"]
+
+	// Skips project files for typescript-eslint integration
+	"include": ["**/*"],
+	"exclude": ["**/dist/", "**/bin/"]
 }
