--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
 	},
 	"dependencies": {
 		"@types/mdast": "^4.0.4",
-		"@types/node": "^18.19.79",
+		"@types/node": "^18.19.100",
 		"@types/unist": "^3.0.3",
-		"type-fest": "^4.36.0",
+		"type-fest": "^4.41.0",
 		"unified": "^11.0.5",
 		"vfile": "^6.0.3",
-		"zod": "^3.24.2"
+		"zod": "^3.24.4"
 	},
 	"devDependencies": {
-		"@kitschpatrol/shared-config": "^5.2.0",
-		"@microsoft/api-extractor": "^7.51.1",
-		"bumpp": "^10.0.3",
+		"@kitschpatrol/shared-config": "^5.4.0",
+		"@microsoft/api-extractor": "^7.52.7",
+		"bumpp": "^10.1.0",
 		"chalk": "^5.4.1",
 		"cli-table3": "^0.6.5",
 		"deepmerge-ts": "^7.1.5",
@@ -63,12 +63,12 @@
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.1",
 		"tsup": "^8.4.0",
-		"typescript": "~5.7.3",
+		"typescript": "~5.8.3",
 		"unist-util-visit": "^5.0.0",
 		"vfile-message": "^4.0.2",
-		"vitest": "^3.0.7"
+		"vitest": "^3.1.3"
 	},
-	"packageManager": "pnpm@10.5.2",
+	"packageManager": "pnpm@10.10.0",
 	"engines": {
 		"node": "^18.19.0 || >=20.5.0"
 	},
@@ -78,7 +78,8 @@
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"esbuild",
-			"puppeteer"
+			"puppeteer",
+			"unrs-resolver"
 		],
 		"overrides": {
 			"eslint-plugin-markdown": "^5.1.0"
