Switch from chalk to picocolors.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@types/mdast": "^4.0.4",
 		"@types/node": "^18.19.100",
 		"@types/unist": "^3.0.3",
+		"picocolors": "^1.1.1",
 		"type-fest": "^4.41.0",
 		"unified": "^11.0.5",
 		"vfile": "^6.0.3",
@@ -55,7 +56,6 @@
 		"@kitschpatrol/shared-config": "^5.4.0",
 		"@microsoft/api-extractor": "^7.52.7",
 		"bumpp": "^10.1.0",
-		"chalk": "^5.4.1",
 		"cli-table3": "^0.6.5",
 		"deepmerge-ts": "^7.1.5",
 		"hast-util-from-html": "^2.0.3",
