--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"dist/*"
 	],
 	"scripts": {
-		"build": "tsup && tsc -p tsconfig.build.json",
+		"build": "tsdown --tsconfig ./tsconfig.build.json",
 		"clean": "git rm -f pnpm-lock.yaml ; git clean -fdX",
 		"dev": "pnpm run test",
 		"fix": "ksc fix",
@@ -54,7 +54,6 @@
 	},
 	"devDependencies": {
 		"@kitschpatrol/shared-config": "^5.7.0",
-		"@microsoft/api-extractor": "^7.52.13",
 		"bumpp": "^10.2.3",
 		"cli-table3": "^0.6.5",
 		"deepmerge-ts": "^7.1.5",
@@ -62,7 +61,7 @@
 		"json5": "^2.2.3",
 		"remark": "^15.0.1",
 		"remark-gfm": "^4.0.1",
-		"tsup": "^8.5.0",
+		"tsdown": "^0.15.5",
 		"typescript": "~5.9.2",
 		"unist-util-visit": "^5.0.0",
 		"vfile-message": "^4.0.3",
