--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
 		"dist/*"
 	],
 	"scripts": {
-		"build": "tsdown --tsconfig ./tsconfig.build.json",
+		"build": "tsdown --dts false && tsc -p tsconfig.build.json",
 		"clean": "git rm -f pnpm-lock.yaml ; git clean -fdX",
 		"dev": "pnpm run test",
 		"fix": "ksc fix",
